--- a/src/XamarinBoilerplate.Core/App.xaml
+++ b/src/XamarinBoilerplate.Core/App.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:themes="clr-namespace:MobileTemplate.Core.Themes;assembly=MobileTemplate.Core"
+             xmlns:themes="clr-namespace:XamarinBoilerplate.Core.Themes;assembly=XamarinBoilerplate.Core"
              xmlns:themes1="clr-namespace:Xamarin.Forms.Themes;assembly=Xamarin.Forms.Theme.Light"
              x:Class="XamarinBoilerplate.Core.App">
   <Application.Resources>
