--- a/src/XamarinBoilerplate.Core/Pages/FormSample/FormSampleView.xaml
+++ b/src/XamarinBoilerplate.Core/Pages/FormSample/FormSampleView.xaml
@@ -2,7 +2,7 @@
 
 <ScrollView xmlns="http://xamarin.com/schemas/2014/forms"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-            xmlns:formSample="clr-namespace:MobileTemplate.Core.Pages.FormSample;assembly=MobileTemplate.Core"
+            xmlns:formSample="clr-namespace:XamarinBoilerplate.Core.Pages.FormSample;assembly=XamarinBoilerplate.Core"
             x:Class="XamarinBoilerplate.Core.Pages.FormSample.FormSampleView"
             BackgroundColor="{Binding PickedColor.Value}">
     <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Padding="6">
