--- a/src/XamarinBoilerplate.Core/Pages/Menu/MainMenuView.xaml
+++ b/src/XamarinBoilerplate.Core/Pages/Menu/MainMenuView.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <StackLayout xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:menu="clr-namespace:MobileTemplate.Core.Pages.Menu;assembly=MobileTemplate.Core"
+             xmlns:menu="clr-namespace:XamarinBoilerplate.Core.Pages.Menu;assembly=XamarinBoilerplate.Core"
              x:Class="XamarinBoilerplate.Core.Pages.Menu.MainMenuView"
              Padding="6">
     <Label Text="{Binding HeaderText.Value}" />
