--- a/src/XamarinBoilerplate.Core/Pages/Shopping/Cart/ShoppingCartView.xaml
+++ b/src/XamarinBoilerplate.Core/Pages/Shopping/Cart/ShoppingCartView.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <StackLayout xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:cart="clr-namespace:MobileTemplate.Core.Pages.Shopping.Cart;assembly=MobileTemplate.Core"
+             xmlns:cart="clr-namespace:XamarinBoilerplate.Core.Pages.Shopping.Cart;assembly=XamarinBoilerplate.Core"
              x:Class="XamarinBoilerplate.Core.Pages.Shopping.Cart.ShoppingCartView">
   <ListView ItemsSource="{Binding CartItems.Value}" VerticalOptions="StartAndExpand" HorizontalOptions="FillAndExpand">
     <ListView.ItemTemplate>
