--- a/src/XamarinBoilerplate.Core/Pages/Shopping/Detail/ShoppingItemDetailView.xaml
+++ b/src/XamarinBoilerplate.Core/Pages/Shopping/Detail/ShoppingItemDetailView.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <StackLayout xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:shopping="clr-namespace:MobileTemplate.Core.Pages.Shopping;assembly=MobileTemplate.Core"
+             xmlns:shopping="clr-namespace:XamarinBoilerplate.Core.Pages.Shopping;assembly=XamarinBoilerplate.Core"
              x:Class="XamarinBoilerplate.Core.Pages.Shopping.Detail.ShoppingItemDetailView">
   <shopping:ShoppingBarView />
   <ScrollView>
