--- a/src/XamarinBoilerplate.Core/Pages/Shopping/List/ShoppingListView.xaml
+++ b/src/XamarinBoilerplate.Core/Pages/Shopping/List/ShoppingListView.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <StackLayout xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:shopping="clr-namespace:MobileTemplate.Core.Pages.Shopping;assembly=MobileTemplate.Core"
-             xmlns:list="clr-namespace:MobileTemplate.Core.Pages.Shopping.List;assembly=MobileTemplate.Core"
+             xmlns:shopping="clr-namespace:XamarinBoilerplate.Core.Pages.Shopping;assembly=XamarinBoilerplate.Core"
+             xmlns:list="clr-namespace:XamarinBoilerplate.Core.Pages.Shopping.List;assembly=XamarinBoilerplate.Core"
              x:Class="XamarinBoilerplate.Core.Pages.Shopping.List.ShoppingListView"
              Spacing="0">
   <shopping:ShoppingBarView VerticalOptions="Start" HorizontalOptions="FillAndExpand"/>
