--- a/src/XamarinBoilerplate.Core/Pages/ThemeSample/CustomThemeSampleView.xaml
+++ b/src/XamarinBoilerplate.Core/Pages/ThemeSample/CustomThemeSampleView.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ScrollView xmlns="http://xamarin.com/schemas/2014/forms"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-            xmlns:themes="clr-namespace:MobileTemplate.Core.Themes;assembly=MobileTemplate.Core"
+            xmlns:themes="clr-namespace:XamarinBoilerplate.Core.Themes;assembly=XamarinBoilerplate.Core"
             x:Class="XamarinBoilerplate.Core.Pages.ThemeSample.CustomThemeSampleView">
   <ScrollView.Resources>
     <ResourceDictionary MergedWith="themes:CustomThemeResources" />
