further remap namespaces

--- a/src/XamarinBoilerplate.Core/Pages/CopySample/CopySampleView.xaml
+++ b/src/XamarinBoilerplate.Core/Pages/CopySample/CopySampleView.xaml
@@ -94,7 +94,7 @@
       Vestibulum dolor justo, ornare vel scelerisque nec, gravida ac massa. Ut dignissim lectus enim, et gravida erat ultrices ut. Fusce dui lacus, tempor non fermentum id, rhoncus id dui. Morbi ligula nunc, luctus ut rhoncus ut, ullamcorper dictum ligula. Integer id mi ut eros pharetra dictum. Nulla et tempus nisl. Nullam molestie metus consectetur diam dignissim ultrices. Fusce pellentesque dolor nec bibendum malesuada. Nam eleifend dui sed justo fermentum convallis vel vel neque. Nulla condimentum odio velit, non pulvinar metus imperdiet sed. Maecenas luctus aliquet odio, sit amet luctus ante cursus nec. Donec eget arcu diam.
     </Label>
     <Label StyleClass="Signature">
-      - Posted by Now Business Intelligence, Inc.
+      - Posted by XamarinBoilerplate, Inc.
       12/27/16 @ 12:43 PM
     </Label>
   </StackLayout>
